--- a/web/package.json
+++ b/web/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "memos",
+  "name": "memos-web",
   "private": true,
+  "description": "Memos - A lightweight, self-hosted memo hub, knowledge base with Markdown support.",
+  "version": "0.18.2",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "release": "vite build --mode release --outDir=../server/router/frontend/dist --emptyOutDir",
-    "lint": "tsc --noEmit --skipLibCheck && eslint --ext .js,.ts,.tsx, src"
+    "preview": "vite preview",
+    "lint": "tsc --noEmit --skipLibCheck && eslint --ext .js,.ts,.tsx, src",
+    "type-check": "tsc --noEmit --skipLibCheck"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
